--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "./scripts/build.sh",
     "format": "prettier --write \"apps/**/*.ts\"",
     "start": "nest start",
+    "dev": "nest start client --watch",
     "start:dev": "yarn format &&./scripts/start.dev.sh",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
@@ -18,11 +19,14 @@
     "@nestjs/axios": "^0.0.1",
     "@nestjs/common": "^8.0.2",
     "@nestjs/core": "^8.0.2",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/microservices": "^8.0.2",
     "@nestjs/mongoose": "^8.0.0",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.4",
     "@nestjs/swagger": "^5.0.3",
     "@nestjs/terminus": "^7.2.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
@@ -30,6 +34,9 @@
     "helmet": "^4.6.0",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.1.0",
@@ -41,9 +48,12 @@
     "@nestjs/cli": "^8.0.2",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^8.0.4",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
