--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "dev": "nest start client --watch",
     "start:dev": "yarn format &&./scripts/start.dev.sh",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage"
   },
   "dependencies": {
     "@nestjs/axios": "^0.0.1",
