--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/mongoose": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.4",
+    "@nestjs/platform-socket.io": "^8.0.9",
     "@nestjs/swagger": "^5.0.3",
     "@nestjs/terminus": "^7.2.0",
+    "@nestjs/websockets": "^8.0.9",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
