--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,31 @@ version: 2.1
 
 orbs:
   node: circleci/node@4.7
+  docker: circleci/docker@1.4.0
 jobs:
+  build-and-push:
+    environment:
+      DOCKER_IMAGE: lamhan3012/nest-docker
+      DOCKER_TAG: latest
+    executor: docker/docker
+    steps:
+      - setup_remote_docker
+      - checkout
+      - docker/check:
+          docker-username: DOCKER_USER
+          docker-password: DOCKER_PASSWORD
+      - docker/build:
+          image: $DOCKER_IMAGE
+          tag: $DOCKER_TAG
+      - docker/push:
+          digest-path: /tmp/digest.txt
+          image: $DOCKER_IMAGE
+          tag: $DOCKER_TAG
+      - run:
+          command: |
+            echo "Digest is: $(</tmp/digest.txt)"
   deploy:
-    docker:
-      - image: arvindr226/alpine-ssh
+    executor: docker/docker
     steps:
       - checkout
       # Please add $SSH_KEY_FINGERPRINT, $DEPLOYED_USER@ and DEPLOYED_SERVER to project's environment
