--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,7 @@ version: '3.7'
 services:
   app:
     container_name: nest
-    build:
-      context: .
-      dockerfile: ./Dockerfile
+    image: lamhan3012/nest-docker:latest
     ports:
       - 8080:3000
     volumes:
