[fix] res data recommend classes

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ JWT_SECRET="AKENZY"
 
 HOST=0.0.0.0
 PORT=3000
-MONGODB_URI=mongodb+srv://akenzy:akenzy123@cluster0.9cp9f.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URI=mongodb://ken:200530@localhost/Aken?authSource=admin
 SALT_OF_ROUNDS=10
 #SWAGGER
 SWAGGER_PATH="/api/docs"
