--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "express-rate-limit": "^5.3.0",
+    "file-type": "^16.5.3",
     "helmet": "^4.6.0",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
@@ -57,6 +58,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/multer": "^1.4.7",
     "@types/node": "^14.14.36",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
