[feat] upload file and blur and get uri image

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/terminus": "^7.2.0",
     "@nestjs/websockets": "^8.0.9",
     "bcrypt": "^5.0.1",
+    "blurhash": "^1.1.4",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
@@ -46,6 +47,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.1.0",
+    "sharp": "^0.29.1",
     "swagger-ui-express": "^4.1.6",
     "typegoose": "^5.9.1",
     "winston": "^3.3.3",
