--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ JWT_SECRET="AKENZY"
 
 HOST=0.0.0.0
 PORT=3000
-MONGODB_URI=mongodb://ken:200530@localhost/Aken?authSource=admin
+# MONGODB_URI=mongodb://ken:200530@localhost/Aken?authSource=admin
+MONGODB_URI=mongodb://127.0.0.1:27017/2School
 SALT_OF_ROUNDS=10
 #SWAGGER
 SWAGGER_PATH="/api/docs"
