--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.1.0",
     "sharp": "^0.29.1",
+    "socket.io-redis": "^6.1.1",
     "swagger-ui-express": "^4.1.6",
     "typegoose": "^5.9.1",
     "winston": "^3.3.3",
