--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^10.0.0",
     "express-rate-limit": "^5.3.0",
     "file-type": "^16.5.3",
+    "firebase-admin": "^10.0.0",
     "helmet": "^4.6.0",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
