--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.4",
     "@nestjs/platform-socket.io": "^8.0.9",
+    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.0.3",
     "@nestjs/terminus": "^7.2.0",
     "@nestjs/websockets": "^8.0.9",
